index2 modified with card code

--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,30 @@
     <!-- Este es el codigo html que he quitado de index para que se muestre por javascript -->
     <!-- nmp install npm run serve pinchar en el primer enlace de localhost: 8080 -->
 
+
+    <div class="movie-container">
+        <div class="movie">
+            <span class="movie-number">1</span>
+            <img src="http://image.tmdb.org/t/p/w500//qJ2tW6WMUDux911r6m7haRef0WH.jpg" alt="poster The Dark Knight"
+                class="movie-poster">
+            <div class="movie-title">The Dark Knight</div>
+            <div class="movie-data">Rating: 9 / 2008</div>
+            <!-- <div class="movie-description-heading">Summary</div> -->
+            <!-- <div class="movie-description">
+                When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept
+                one of the greatest psychological and physical tests of his ability to fight injustice.
+            </div> -->
+            <div class="movie-other"><span>Director:</span> Christopher Nolan</div>
+            <div class="movie-other"><span>Actors:</span> Christian Bale, Heath Ledger, Aaron EckhartHeath Ledger</div>
+            <div class="movie-other"><span>Category:</span> Action</div>
+        </div>
+
+    </div> 
+
+
+
+
+
     <a id="target_element" href=""></a>
     <div class="position-sticky">
         <header class="header layout-box">
