new changes made in class

--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
         <div class="movie">
             <span class="movie-number">1</span>
             <img src="http://image.tmdb.org/t/p/w500//qJ2tW6WMUDux911r6m7haRef0WH.jpg" alt="poster The Dark Knight"
-                class="movie-poster">
+                class="movie-img">
             <div class="movie-title">The Dark Knight</div>
             <div class="movie-data">Rating: 9 / 2008</div>
             <!-- <div class="movie-description-heading">Summary</div> -->
