row cards in develop

--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,7 @@
 
 
     <div class="movie-container">
+        <!-- código para las películas con grid -->
         <div class="movie">
             <span class="movie-number">1</span>
             <img src="http://image.tmdb.org/t/p/w500//qJ2tW6WMUDux911r6m7haRef0WH.jpg" alt="poster The Dark Knight"
@@ -31,6 +32,25 @@
 
     </div> 
 
+    <div class="list-movie-container">
+        <!-- código pra las películas con list -->
+        <div class="list-movie">
+            <span class="list-movie-number">1</span>
+            <img src="http://image.tmdb.org/t/p/w500//qJ2tW6WMUDux911r6m7haRef0WH.jpg" alt="poster The Dark Knight"
+                class="list-movie-img">
+            <div class="list-movie-title">The Dark Knight</div>
+            <div class="list-movie-data">Rating: 9 / 2008</div>
+            <!-- <div class="movie-description-heading">Summary</div> -->
+            <!-- <div class="movie-description">
+                When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept
+                one of the greatest psychological and physical tests of his ability to fight injustice.
+            </div> -->
+            <div class="list-movie-other"><span>Director:</span> Christopher Nolan</div>
+            <div class="list-movie-other"><span>Actors:</span> Christian Bale, Heath Ledger, Aaron EckhartHeath Ledger</div>
+            <div class="list-movie-other"><span>Category:</span> Action</div>
+        </div>
+
+    </div> 
 
 
 
